# madr_fastapi

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
madr_fastapi/: app.py  database.py  models.py  schemas.py  security.py  services.py  utils.py
madr_fastapi/routers/: auth.py  books.py  contas.py  novelists.py  users.py
migrations/: env.py
migrations/versions/: 5bd7137bd33b_create_accounts_table.py  86c9b511087f_create_users_livros_and_romancistas_.py  c782efcc0b7e_create_accounts_table.py  e8305d19ad71_create_users_livros_and_romancistas_.py
tests/: conftest.py  test_app.py  test_auth.py  test_books.py  test_contas.py  test_db.py  test_novelists.py  test_security.py  test_users.py
